samples/_failures_safe/1761422515_796ca7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ad8ee7a.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_8ad8ee7a.c:183:20: error: missing terminating " character
  183 |             printf("Vertex %d:
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_8ad8ee7a.c:183:13: error: expected expression at end of input
  183 |             printf("Vertex %d:
      |             ^~~~~~
./samples/SAFE/__tmp_8ad8ee7a.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ad8ee7a.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ad8ee7a.c:183:13: error: expected declaration or statement at end of input
